--- a/app.css
+++ b/app.css
@@ -16,8 +16,8 @@ body,
 html {
   height: 100%;
   width: 100%;
-  background: rgb(56, 56, 56);
-  color: white;
+  background: rgb(255, 255, 255);
+  color: black;
   font-family: "Quicksand", sans-serif;
 }
 
@@ -49,8 +49,7 @@ html {
 }
 
 .play-again-btn {
-  color: white;
-  border: 1px solid white;
+  border: 1px solid black;
   border-radius: 0.5em;
   margin-top: 2em;
   font-size: 1.25em;
@@ -60,7 +59,8 @@ html {
 }
 
 .play-again-btn:hover {
-  background: rgb(35, 35, 35);
+  background: rgb(0, 0, 0);
+  color: white;
 }
 
 .win-screen {
@@ -75,7 +75,6 @@ html {
 
 .tip {
   width: max-content;
-  color: rgb(194, 194, 194);
   position: absolute;
   top: 1em;
   margin: 0 auto;
@@ -84,9 +83,8 @@ html {
 }
 
 .guesses {
-  color: rgb(194, 194, 194);
   text-align: center;
-  font-weight: 200;
+  font-weight: 400;
   font-size: 1.5em;
   width: max-content;
   margin: 0 auto;
@@ -111,7 +109,6 @@ html {
 }
 
 .word2 {
-  color: rgba(255, 255, 255, 0.851);
   display: flex;
   text-align: center;
   font-weight: 200;
@@ -122,14 +119,18 @@ html {
 }
 
 .wrong-letters-wrapper {
-  color: rgb(194, 194, 194);
   font-size: 2em;
   display: block;
   margin: 0 auto;
 }
 
+.wrong {
+  font-weight: 400;
+  font-size: 0.66em;
+  margin-bottom: 1em;
+}
+
 .already-guessed {
   opacity: 0;
   margin-top: 1em;
-  color: rgb(194, 194, 194);
 }
